# TestTask2

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: asgi.py  lifespan.py
app/api/: routes.py  schemas.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/integrations/rabbitmq/: consumer.py  producer.py
app/middleware/: trace.py
app/repositories/: user_repo.py
app/services/: user_service.py
