[tool.poetry]
name = "litestar-user-api"
version = "0.1.0"
description = "Test task: user management REST API with Litestar"
authors = ["Егор <egor@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
litestar = { extras = ["standard"], version = "^2.0" }
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"
structlog = "^24.0"
aio-pika = "^9.5.4"
faststream = { extras = ["cli"], version = "^0.5.34" }
psycopg2-binary = "^2.9"
pydantic-settings = "^2.0"
asyncpg = "^0.29.0"
starlette = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
alembic = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"